2002-02-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: ([stringByExpandingTildeInPath]) fix bug in
	handling ~username/... format.

2002-02-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSHtml.m: support for merging types and functions etc.
	* Tools/AGSIndex.m: ditto
	* Tools/AGSOutput.h: ditto
	* Tools/AGSOutput.m: ditto
	* Tools/autogsdoc.m: ditto
	Put stuff in place for merging info
	revert key-value coding changes.
	* Source/NSString.m: Fix bug in datausingEncoding:allowLossyConversion:
	pointed out by Stephen Brandon.

Mon Feb 11 15:11:31 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSString.m (NSImmutableString): Implemented copy,
	copyWithZone:, mutableCopy, mutableCopyWithZone:, so that the
	string can be copied, and the copy no longer tracks the parent.

2002-02-10  Michael Hanni <mhanni@sprintmail.com>

        * Source/NSObjCRuntime.m: changed NSAssert() to NSCAssert() from
        last change. Also added NSException.h include to make compile
        correctly and quietly.

2002-02-10  Manuel Guesdon <mguesdon@orange-concept.com>

	* Source/NSObject.m: changes to enable derived object KeyValueCoding 
		process chnages (EOGenericRecord for example).
               o added:
                _infoForInstanceVariableNamed:retType:retSize:retOffset:
                _getValueForKey:selector:type:size:offset:
                _setValueForKey:object:selector:type:size:offset:
                _handleQueryWithUnboundKey:
                _handleTakeValue:forUnboundKey:
               o modified:
                storedValueForKey:
                takeStoredValue:forKey:
                valueForKey:
                takeValue:forKey:
                To use added method.
        * Source/NSObjCRuntime.m:
               o added NSAssert in GSGetInstanceVariable() and 
                 GSSetInstanceVariable()
	* Headers/gnustep/base/NSKeyValueCoding: 
               o added: